@@ -447,7 +447,8 @@ if __name__=='pymol.setting':
       atom_name_wildcard        = (413, '')
       ignore_case               = (414, '')
       presentation_auto_quit    = (415, '')
-
+      editor_auto_dihedral      = (416, '')
+      
    setting_sc = Shortcut(SettingIndex.__dict__.keys())
 
    index_list = []
